# cams-dl-ensemble

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
cams/: datamodule.py  dataset.py  plmodule.py  sample.py
doc/images/: model_io.drawio
scripts/: fit_and_val.py  main.py
src/: cli.py  datamodule.py  dataset.py  plmodule.py  sample.py
tests/cams/: test_cams_cli.py  test_datamodule.py  test_dataset.py  test_plmodule.py  test_sample.py
tests/scripts/: test_fit_n_val.py  test_main.py
